--- a/piano.html
+++ b/piano.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="sounds.js"></script>
-    <title>Piano</title>
+    <script src="sounds.js" defer></script>
+    <title>Piano</title>    
 </head>
 
 <body>
@@ -15,72 +15,54 @@
         <div class="piano">
             <div class="top"></div>
             <div class="keys">
-                <div class="white-key" id="fa-2" onclick="fa2()">
-                    <div class="black-key" id="fa-sharp-2"></div>
+                <div class="white-key" id="do3">
+                    <div class="black-key" id="dob3"></div>
                 </div>
-                <div class="white-key" id="sol-2" onclick="sol2()">
-                    <div class="black-key" id="sol-sharp-4"></div>
+                <div class="white-key" id="re3">
+                    <div class="black-key" id="reb3"></div>
                 </div>
-                <div class="white-key" id="la-2" onclick="la2()">
-                    <div class="black-key" id="la-sharp-2"></div>
+                <div class="white-key" id="mi3"></div>
+                <div class="white-key" id="fa3">
+                    <div class="black-key" id="fab3"></div>
                 </div>
-                <div class="white-key" id="si-2" onclick="si2()"></div>
-                <div class="white-key" id="do-3" onclick="do3()">
-                    <div class="black-key" id="do-sharp-3"></div>
+                <div class="white-key" id="sol3">
+                    <div class="black-key" id="solb3"></div>
+                </div> 
+                <div class="white-key" id="la3">
+                    <div class="black-key" id="lab3"></div>
                 </div>
-                <div class="white-key" id="re-3" onclick="re3()">
-                    <div class="black-key" id="re-sharp-3"></div>
+                <div class="white-key" id="si3" ></div>
+                <div class="white-key" id="#do4" >
+                    <div class="black-key" id="#dob4"></div>
                 </div>
-                <div class="white-key" id="mi-3" onclick="mi3()"></div>
-                <div class="white-key" id="fa-3" onclick="fa3()">
-                    <div class="black-key" id="fa-sharp-3"></div>
+                <div class="white-key" id="re4">
+                    <div class="black-key" id="reb4"></div>
                 </div>
-                <div class="white-key" id="sol-3" onclick="sol3()">
-                    <div class="black-key" id="sol-sharp-3"></div>
+                <div class="white-key" id="mi4" onclick="mi4()"></div>
+                <div class="white-key" id="fa4">
+                    <div class="black-key" id="fab4"></div>
                 </div>
-                <div class="white-key" id="la-3" onclick="la3()">
-                    <div class="black-key" id="la-sharp-3"></div>
+                <div class="white-key" id="sol4">
+                    <div class="black-key" id="solb4"></div>
                 </div>
-                <div class="white-key" id="si-3" onclick="si3()"></div>
-                <div class="white-key" id="#do-4" onclick="do4()">
-                    <div class="black-key" id="#do-sharp-4"></div>
+                <div class="white-key" id="la4">
+                    <div class="black-key" id="lab4"></div>
                 </div>
-                <div class="white-key" id="re-4" onclick="re4()">
-                    <div class="black-key" id="re-sharp-4"></div>
-                </div>
-                <div class="white-key" id="mi-4" onclick="mi4()"></div>
-                <div class="white-key" id="fa-4" onclick="fa4()">
-                    <div class="black-key" id="fa-sharp-4"></div>
-                </div>
-                <div class="white-key" id="sol-4" onclick="sol4()">
-                    <div class="black-key" id="sol-sharp-4"></div>
-                </div>
-                <div class="white-key" id="la-4" onclick="la4()">
-                    <div class="black-key" id="la-sharp-4"></div>
-                </div>
-                <div class="white-key" id="si-4" onclick="si4()"></div>
-                <div class="white-key" id="do-5" onclick="do5()">
-                    <div class="black-key" id="do-sharp-5"></div>
-                </div>
-                <div class="white-key" id="re-5" onclick="re5()">
-                    <div class="black-key" id="re-sharp-5"></div>
-                </div>
-                <div class="white-key" id="mi-5" onclick="mi5()"></div>
-                <div class="white-key" id="fa-5" onclick="fa5()">
-                    <div class="black-key" id="fa-sharp-5"></div>
-                </div>
-                <div class="white-key" id="sol-5" onclick="sol5()">
-                    <div class="black-key" id="sol-sharp-5"></div>
-                </div>
-                <div class="white-key" id="la-5" onclick="la5()">
-                    <div class="black-key" id="la-sharp-5"></div>
-                </div>
-                <div class="white-key" id="si-5" onclick="si5()">
-                </div>
+                <div class="white-key" id="si4"></div>
             </div>
+            
         </div>
     </div>
-    <div class="sheet-music">
+    <div class="audio-files">
+        <audio src="./sounds/Piano.mf.C3.mp3"></audio>
+        <audio src="./sounds/Piano.mf.D3.mp3"></audio>
+        <audio src="./sounds/Piano.mf.E3.mp3"></audio>
+        <audio src="./sounds/Piano.mf.F3.mp3"></audio>
+        <audio src="./sounds/Piano.mf.G3.mp3"></audio>
+        <audio src="./sounds/Piano.mf.A3.mp3"></audio>
+        <audio src="./sounds/Piano.mf.B3.mp3"></audio>
+        <audio src="./sounds/Piano.mf.C4.mp3"></audio>
+        <audio src="./sounds/Piano.mf.D4.mp3"></audio>
     </div>
 
 </body>
