trimmed sound files and readme update

--- a/piano.html
+++ b/piano.html
@@ -38,7 +38,7 @@
                 <div class="white-key" id="re4">
                     <div class="black-key" id="reb4"></div>
                 </div>
-                <div class="white-key" id="mi4" onclick="mi4()"></div>
+                <div class="white-key" id="mi4"></div>
                 <div class="white-key" id="fa4">
                     <div class="black-key" id="fab4"></div>
                 </div>
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="audio-files">
-        <audio src="./sounds/Piano.mf.C3.mp3"></audio>
+        <audio src="./sounds/Piano.mf.C3.mp3"></audio> 
         <audio src="./sounds/Piano.mf.D3.mp3"></audio>
         <audio src="./sounds/Piano.mf.E3.mp3"></audio>
         <audio src="./sounds/Piano.mf.F3.mp3"></audio>
@@ -63,6 +63,12 @@
         <audio src="./sounds/Piano.mf.B3.mp3"></audio>
         <audio src="./sounds/Piano.mf.C4.mp3"></audio>
         <audio src="./sounds/Piano.mf.D4.mp3"></audio>
+        <audio src="./sounds/Piano.mf.E4.mp3"></audio>
+        <audio src="./sounds/Piano.mf.F4.mp3"></audio>
+        <audio src="./sounds/Piano.mf.G4.mp3"></audio>
+        <audio src="./sounds/Piano.mf.A4.mp3"></audio>
+        <audio src="./sounds/Piano.mf.B4.mp3"></audio>
+
     </div>
 
 </body>
